# pip-fund

./: README.md  pypi-fund.py  pyproject.toml  sample_output.yml
src/pip_fund/: __init__.py  fund.py
